data/derived/comb/progs/unify/prog3521.ml.out
Characters 198-213:
  removeZero (add (padZero l1 l2));;
                  ^^^^^^^^^^^^^^^
Error: This expression has type int list * int list
       but an expression was expected of type int list list * 'a
       Type int is not compatible with type int list 
